-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.875 2011-03-15 02:06:28 guru Exp $
-----------------------------------------------------------------------------------------

2011-03-08	pwessel
	* configure.ac:		Check for bad 64-bit qsort under earlier OS X did not work.
				Needed to add -fno-common to CFLAGS under OS X Tiger
	* gmt2kml_func.c:	Segment headers now can have -T<text> options that are used for
				feature descriptions, but we will backwards honor the old -Dtext
				options.
	* gmt_init.c:		Will allow extended columns D (distance), G (fill), L (label),
				T (text), W (pen) and Z( value) to be used in -a<col>=<name>.

2011-03-07	pwessel
	* gmt_init.c:		The -a parsing now allows +G (upper case) for geometry, which means
				we must split features that straddles the Dateline since the G in
				GIS apparently does not mean what we think it means...
	* gmtconvert_func.c:	Did not copy over segment headers, labels, and ogr info.
	* gmt_map.c:		Added GMT_split_dateline_poly which splits a polygon that straddles
				the Dateline into TWO pieces (some pieces connected by non-area bridges)
	* gmt_support.c:	Added GMT_split_dateline_line which splits a line that straddles
				the Dateline into several individual segments.

2011-03-06	remko
	* GMT_jet.cpt:		Bug fix: Palette had two bad values causing discontinuities.
	* makecpt_func.c, grd2cpt_func.c:	Added -W option to not interpolate color palette.
	* GMT_categorical.cpt, GMT_etopo1.cpt:	Two new color palettes.

2011-03-04	remko
	* xyz2grd_func.c:	-Z did not work, changed order of parsing -Z option and GMT_Begin_IO.
				 Also: -Z...s... now properly skips number of bytes, not items.

2011-03-02	pwessel
	* CPTs:			Added "random" as valid cpt file; this will generate
				random colors instead of interpolating from a master table.
	* gmt_plot.c:		Added GMT_geo_polygon_segment which extends GMT_geo_polygon