@@ -1,7 +1,17 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.875 2011-03-15 02:06:28 guru Exp $
+	$Id: ChangeLog,v 1.876 2011-03-15 02:24:40 guru Exp $
 -----------------------------------------------------------------------------------------
 
+-----------------------------------------------------------------------------------------
+2011-03-14	pwessel
+	* GMT5 branch merged to the trunk and pruned of GMT 4 files.  We now have a
+	  working GMT5 module in the repository.
+	* pslib.c:		Changed versions of PSL_prologue/label.ps to match the
+				new numbers after the merge back to the trunk.
+-----------------------------------------------------------------------------------------
+2011-03-10	pwessel
+	* GMT 4.5.6 finalized and released.  GMT cvs archive moved to GMT4.
+-----------------------------------------------------------------------------------------
 2011-03-08	pwessel
 	* configure.ac:		Check for bad 64-bit qsort under earlier OS X did not work.
 				Needed to add -fno-common to CFLAGS under OS X Tiger
